--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,7 +2,28 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-nav a.brand-logo{
-  padding-left: 10px;
+nav {
+  padding-left: 20px;
+  padding-right: 20px;
 }
+
+.welcome-title{
+  text-align: center;
+}
+
+.welcome-btns{
+  display: flex;
+  justify-content: center;
+  height: 500px;
+}
+
+a.welcome-btn{
+  font-size: 32px;
+  padding-top: 30px;
+  border-radius: 7px;
+  margin: 15px;
+  width: 200px;
+  height: 100px;
+}
+
 
