--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="indigo darken-4" > 
   <div class="navbar-fixed">
     <div class="nav-wrapper">
-     <a class="brand-logo">ROBO SPORTS LEAGUE</a>
+     <a href="/" class="brand-logo">ROBO SPORTS LEAGUE</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a>Sign In</a></li>
         </ul>
