--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,14 @@
 <div class="welcome-container">
-  
+  <div class="welcome-title">
+    <h1> Welcome to the Robot Sports League</h1>
+    <h2> Sign in or register below! </h2>
+  </div>
+  <div class="welcome-btns">
+    <a class="welcome-btn waves-effect waves-light btn indigo darken-4">
+      Sign Up
+    </a>
+    <a class=" welcome-btn waves-effect waves-light btn indigo darken-4">
+      Sign In
+    </a>
+  </div>
 </div>
