creates team model and migration

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,11 +4,11 @@
     <h2> Sign in or register below! </h2>
   </div>
   <div class="welcome-btns">
-    <a class="welcome-btn waves-effect waves-light btn indigo darken-4">
-      Sign Up
-    </a>
-    <a class=" welcome-btn waves-effect waves-light btn indigo darken-4">
+    <div class="welcome-btn">
+      <%= link_to 'SIGN UP', login_path, class: "welcome-btn waves-effect waves-light btn indigo darken-4" %>
+    </div>
+    <div class=" welcome-btn waves-effect waves-light btn indigo darken-4">
       Sign In
-    </a>
+    </div>
   </div>
 </div>
