adds team creation, adds team login functionality, adds selenium webdriver for testing, adds database cleaner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
 
   <body>
     <%= render 'partials/nav' %>
+      <div class="flash-message">
+       <% flash.each do |name, msg| %>
+         <%= content_tag :div, msg, class: name %>
+       <% end %>
+     </div>
     <%= yield %>
   </body>
 </html>
