--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,10 @@
   </div>
   <div class="welcome-btns">
     <div class="welcome-btn">
-      <%= link_to 'SIGN UP', login_path, class: "welcome-btn waves-effect waves-light btn indigo darken-4" %>
+      <%= link_to 'SIGN UP', new_team_path, class: "welcome-btn waves-effect waves-light btn indigo darken-4" %>
     </div>
-    <div class=" welcome-btn waves-effect waves-light btn indigo darken-4">
-      Sign In
+    <div class=" welcome-btn">
+      <%= link_to 'SIGN IN', login_path, class: "welcome-btn waves-effect waves-light btn indigo darken-4" %>
     </div>
   </div>
 </div>
