--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -3,7 +3,11 @@
     <div class="nav-wrapper">
      <a href="/" class="brand-logo">ROBO SPORTS LEAGUE</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a>Sign In</a></li>
+          <% if current_team %>
+            <li><%= link_to current_team.team_name , dashboard_path %></li>
+            <% else%>
+          <li><%= link_to 'Sign In', login_path%></li>
+            <%end%>
         </ul>
     </div>
   </div>
