--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,13 @@
 <div class="welcome-container">
   <div class="welcome-title">
     <h1> Welcome to the Robot Sports League</h1>
+  </div>
+  <% if current_team.nil?%>
+    <div class="welcome-title">
     <h2> Sign in or register below! </h2>
-  </div>
-  <div class="welcome-btns">
-    <div class="welcome-btn">
-      <%= link_to 'SIGN UP', new_team_path, class: "welcome-btn waves-effect waves-light btn indigo darken-4" %>
     </div>
-    <div class=" welcome-btn">
-      <%= link_to 'SIGN IN', login_path, class: "welcome-btn waves-effect waves-light btn indigo darken-4" %>
-    </div>
-  </div>
+    <%= render 'partials/welcome_btns' %>
+    <% else %>
+    <h2 class="welcome-title"> See Dashboard For Roster Info </h2>
+  <%end%>
 </div>
