adds test for auto generate roster

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Welcome <%=@team.team_name%>'s</h1>
 
 <%= link_to 'Log Out', logout_path, method: 'delete', class: "button btn indigo darken-4" %>
+
+<div>
+
+</div>
