team sees roster in their dashboard, they are able generate a roster and clear a roster

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,4 +30,25 @@ a.welcome-btn{
   color: white;
 }
 
+.starters {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+}
 
+.alternates {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.player-card {
+  margin-left: 45px;
+  margin-right: 45px;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  width: 100px;
+  height: 200px;
+}
