adds style cards to robot roster

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,25 +30,16 @@ a.welcome-btn{
   color: white;
 }
 
-.starters {
+ .roster-role {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   width: 100%;
 }
 
-.alternates {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 100%;
-}
 
-.player-card {
-  margin-left: 45px;
-  margin-right: 45px;
-  margin-top: 25px;
-  margin-bottom: 20px;
-  width: 100px;
-  height: 200px;
+div.player-card {
+  width: 45%;
+  margin-left: auto;
+  margin-right: auto;
 }
