--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -8,29 +8,42 @@
   <div class="roster">
     <h3>Starters</h3>
     <hr>
-    <div class="starters">
-        <% @presenter.team.starters.each do |starter| %>
-        <div class="player-card">
-          <h6> <%= starter.name %> </h6>
+    
+    <div class="roster-role starters">
+      <% @presenter.team.starters.each do |starter| %>
+      <div class="player-card card indigo darken-4">
+        <div class="card-content white-text">
+          <span class="card-title"> <%= starter.name %> </span>
           <p> Strength: <%= starter.strength %> </p>
           <p> Speed: <%= starter.speed %> </p>
           <p> Agility: <%= starter.agility %> </p>
           <h6> Total: <%= starter.attribute_sum %> </h6>
         </div>
-        <% end %>
+        <div class="card-action">
+          <a href="#">Replace Player</a>
+        </div>
+      </div>
+      <% end %>
     </div>
+
     <h3>Alternates</h3>
     <hr>
-    <div class="alternates">
-        <% @presenter.team.alternates.each do |alternate| %>
-        <div class="player-card">
-          <h6> <%= alternate.name %> </h6>
+    <div class="roster-role alternates">
+      <% @presenter.team.alternates.each do |alternate| %>
+      <div class="player-card card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title"> <%= alternate.name %> </span>
           <p> Strength: <%= alternate.strength %> </p>
           <p> Speed: <%= alternate.speed %> </p>
           <p> Agility: <%= alternate.agility %> </p>
           <h6> Total: <%= alternate.attribute_sum %> </h6>
         </div>
-        <% end %>
+        <div class="card-action">
+          <a href="#">Replace Player</a>
+        </div>
+      </div>
+
+      <% end %>
     </div>
   </div>
   <% end %>
