--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,9 +37,27 @@ a.welcome-btn{
   width: 100%;
 }
 
+.roster-btn {
+  display: block;
+  width: 25%;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 div.player-card {
   width: 45%;
   margin-left: auto;
   margin-right: auto;
+}
+
+div.team-form {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;;
+}
+
+div.button-container {
+  width: 100%;
 }
