--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,10 +1,11 @@
-<nav class="indigo darken-4" > 
+<nav class="indigo darken-4" >
   <div class="navbar-fixed">
     <div class="nav-wrapper">
      <a href="/" class="brand-logo">ROBO SPORTS LEAGUE</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <% if current_team %>
             <li><%= link_to current_team.team_name , dashboard_path %></li>
+            <li><%= link_to 'Log Out', logout_path, method: 'delete' %></li>
             <% else%>
           <li><%= link_to 'Sign In', login_path%></li>
             <%end%>
