team can change name

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,4 +1,5 @@
 <main class="container">
+  <%= link_to 'Edit Team Name',edit_team_path(current_team), class: "roster-btn button btn blue darken-1"  %>
 <div class="button-container">
   <%= link_to 'Generate Roster', create_roster_teams_path, class: "roster-btn button btn blue darken-1" %>
 </div>
